Add --add-opens java.base/sun.nio.fs JVM arg to Adobe server configs
Ported this fix from the already-working coldbox-modules/cbfs server
configs. On Java 17+, the module system blocks reflective access to
internal JDK packages like sun.nio.fs (which backs
java.nio.file.Files) unless explicitly opened via --add-opens. This is
very likely the real root cause of two previously-unexplained Adobe
failures: the multi-part upload path (which calls
java.nio.file.Files.newByteChannel()) silently failing inside a
try/catch and falling back to a non-multipart upload, and possibly
contributing to slow/flaky adobe@2025 startup.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MY8vKDaEubRApVMT9BXSYk